--- a/src/App.css
+++ b/src/App.css
@@ -91,9 +91,18 @@ text-align: center;  }
     transform: translateX(0);
   }
 }
+@keyframes animate {
+  0% { 
+    width: 0px;
+  }
+  100% {
+    width: 100%;
+  }
+}
 .welcome {
-  animation: slideInLeft 0.5s ease-in;
-  transition: color 0.9s;
+  white-space: nowrap;
+  overflow: hidden;
+  animation: animate 2s linear forwards;
   font-size: 5rem;
   font-weight: bold;
 }
