--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,9 @@ text-align: center;  }
     .explore {
       text-align: center;
     }
+    .links {
+      text-align: center;
+    }
   }
 /* button {
   background-color: violet;
@@ -107,8 +110,6 @@ text-align: center;  }
   font-weight: bold;
   transition: color 0.9s;
 }
-
-
 
 .home-content{
   animation: slideInLeft 0.5s ease-in;
